--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 761253729793474590
 textchannel = 761235086577893419
 ladderchannel = 
 jungsanchannel = 
