--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 761253729793474590
-textchannel = 761235086577893419
+voicechannel = 
+textchannel = 
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
@@ -16,7 +16,7 @@ delmungcnt = 20
 bossInfoNum = 3
 
 restarttime = 04:30
-restartPeriod = 1
+restartPeriod = 7
 
 file_name = 
 jsonname = 
